--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-svg-worldmap": "^1.0.37",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
